--- a/2013-10-02-Photoshop-Lite/index.haml
+++ b/2013-10-02-Photoshop-Lite/index.haml
@@ -6,15 +6,17 @@
     %link{rel: 'stylesheet', href: 'css/normalize.css'}
     %link{rel: 'stylesheet', href: 'css/style.css'}
   %body
-    %h1 Photoshop Lite
+    %h1 Paint<span id='lite'>Lite</span>
     %input#color{type:'text', placeholder:'Create your color.', autofocus:true}
     %input#add_color{type:'button', value:'Add Color'}
-    #brush.box
-    .clear
+    %span#brush
     #box_container
-      #boxes
+      #colors
       .clear
-
+    %input#amount{type:'text', placeholder:'Type in number for canvas size (e,g 5000).'}
+    %input#add_box{type:'button', value:'Add Boxes!'}
+    #boxes
+      .clear
 
 
     %script{src: 'js/jquery-1.10.2.min.js'}
