--- a/2013-10-04-ToDo-Application/scss/style.scss
+++ b/2013-10-04-ToDo-Application/scss/style.scss
@@ -64,6 +64,11 @@ input {
   box-shadow: 1px 1px 1px #873436;
 }
 
+.delete_button:hover {
+  background-color: #B22426;
+  transition: all 0.4s ease-out;
+}
+
 #add_task {
   background-color: #315063;
   color: #fff;
