--- a/2013-10-11-2013-10-11-Stock-Graph/index.haml
+++ b/2013-10-11-2013-10-11-Stock-Graph/index.haml
@@ -25,6 +25,12 @@
     .small-2.columns
       %input#buy_stock.button.small.radius{type:'button', value:'Buy Stock'}
   .row
+    .small-2.columns
+      %h3.subheader Balance
+    .small-3.columns
+      %input#balance{type:'text', readonly:true, placeholder:'$0.00'}
+    .small-7.columns
+  .row
     .small-12.columns#container
 
 
