--- a/2013-10-16-Mapp-it/public/scss/app.scss
+++ b/2013-10-16-Mapp-it/public/scss/app.scss
@@ -12,13 +12,13 @@ h1 {
 }
 
 #map-canvas {
-  height: 100%;
-  width: 65%;
+  height: 90%;
+  width: 100%;
   border: 1px solid black;
-  float: left;
+  margin: 0 auto;
 }
 
 #buttons {
-  width: 35%;
-  float: left;
+  height: 10%;
+  width: 100%;
 }
