--- a/2013-10-22-Shopping-Firebase-TDD/public/css/app.css
+++ b/2013-10-22-Shopping-Firebase-TDD/public/css/app.css
@@ -1,4 +1,4 @@
-#products {
+#products, #cart {
   margin: 0 auto;
   width: 100%; }
 
@@ -8,3 +8,10 @@
 
 .hidden {
   visibility: hidden; }
+
+#purchase {
+  float: right; }
+
+.button {
+  position: relative;
+  bottom: -15px; }
