--- a/2013-10-22-Shopping-Firebase-TDD/public/scss/app.scss
+++ b/2013-10-22-Shopping-Firebase-TDD/public/scss/app.scss
@@ -6,7 +6,7 @@
 // }
 
 
-#products {
+#products, #cart {
   margin: 0 auto;
   width: 100%;
 }
@@ -18,4 +18,13 @@
 
 .hidden {
   visibility: hidden;
+}
+
+#purchase {
+  float: right;
+}
+
+.button {
+  position: relative;
+  bottom: -15px;
 }
