--- a/2013-11-01-Mix-Master-Express/views/artists/index.jade
+++ b/2013-11-01-Mix-Master-Express/views/artists/index.jade
@@ -3,16 +3,20 @@ extends ../template/layout
 block content
   .row
     .small-12.columns
-      h1(style='text-align: center;') yo dawg.
+      h1(style='text-align: center;') mix it up.
   .row
     .small-12.columns
-      h4(style='text-align: center;') mix it up.
-  .row
-    .small-12.columns
-      #cat-dj
-        img(src='/images/tumblr_lw6997pgXD1qdbghdo1_400.gif' style='text-align: center;')
-  .row
-    .small-12.columns
-      footer
-        p: a(href='http://media.photobucket.com/user/Sheena_00/media/djcats.gif.html?filters%5bterm%5d=cat%20dj&filters%5bprimary%5d=images' target='_blank') Cat dj image by Sheena_00 on Photobucket
-
+      #artists
+        each artist in artists
+          .artist
+            h3: a(href='/artists/#{artist.id}')= artist.name
+            img(src=artist.photo)
+            a(href=artist.website)
+            .row
+              .small-5.columns
+              .small-2.columns
+                  a.button.tiny.radius(href='/songs/#{artist.id}/edit') Edit Artist
+              .small-1.columns
+                form(action='/artists/#{artist.id}', method='post')
+                  input(type='hidden', name='_method', value='delete')
+                  button.tiny.alert.radius(type='submit') Delete
