--- a/2013-11-01-Mix-Master-Express/views/songs/show.jade
+++ b/2013-11-01-Mix-Master-Express/views/songs/show.jade
@@ -13,7 +13,7 @@ block content
             .row
               .small-3.columns
                 each genre in song.genres
-                  span.genre= '• ' + genre
+                  span.genre= '• ' + genre.name
               .small-5.columns
               .small-4.columns
                 span.created-at= song.createdAt
